--- a/team_code_transfuser/requirements.txt
+++ b/team_code_transfuser/requirements.txt
@@ -50,13 +50,13 @@ nbconvert==5.6.1
 nbformat==5.0.4
 networkx==2.2
 notebook==6.0.3
-numpy==1.18.1
+# numpy==1.18.1
 nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
-open3d==0.9.0.0
-opencv-python==4.2.0.32
+open3d
+opencv-python
 openmim==0.1.5
-pandas==0.25.3
+pandas
 pandocfilters==1.4.2
 parso==0.6.2
 pathtools==0.1.2
@@ -87,9 +87,9 @@ pyzmq==19.0.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
-scikit-image==0.16.2
-scikit-learn==0.22.2.post1
-scipy==1.4.1
+scikit-image
+scikit-learn
+scipy
 Send2Trash==1.5.0
 sentry-sdk==0.14.2
 Shapely==1.7.0
