--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-results/
+results/*
+result_json/*
+result_test/*
 model_ckpt/
 data/
 
