--- a/team_code_transfuser/requirements_copy.txt
+++ b/team_code_transfuser/requirements_copy.txt
@@ -31,9 +31,9 @@ imageio==2.8.0
 imgaug==0.4.0
 importlib-metadata==1.6.0
 ipykernel==5.2.0
-
+ipython==7.13.0
 ipython-genutils==0.2.0
-
+ipywidgets==7.5.1
 jedi==0.16.0
 Jinja2==2.11.1
 joblib==0.14.1
@@ -46,12 +46,14 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 mistune==0.8.4
 munkres==1.1.4
-nbformat
-networkx==2.2 
-numpy==1.18.1
+nbconvert==5.6.1
+nbformat==5.0.4
+networkx==2.2
+notebook==6.0.3
+# numpy==1.18.1
 nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
-
+open3d
 opencv-python
 openmim==0.1.5
 pandas
@@ -72,7 +74,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydot==1.4.1
 pygame==2.0.1
-Pygments
+Pygments==2.6.1
 pyparsing==2.4.6
 pyrsistent==0.16.0
 python-dateutil==2.8.1
@@ -80,13 +82,13 @@ pytictoc==1.5.2
 pytorch-lightning==0.7.1
 pytz==2019.3
 PyWavelets==1.1.1
-PyYAML
+PyYAML==5.3
 pyzmq==19.0.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
 scikit-image
-scikit-learn==0.22.2.post1
+scikit-learn
 scipy
 Send2Trash==1.5.0
 sentry-sdk==0.14.2
@@ -96,12 +98,13 @@ six==1.14.0
 smmap==3.0.1
 subprocess32==3.5.4
 tabulate==0.8.7
+tensorboard==2.1.1
 terminado==0.8.3
 testpath==0.4.4
 timm==0.5.4
-torch
-torchaudio
-torchvision
+torch==1.11.0
+torchaudio==0.11.0
+torchvision==0.12.0
 tornado==6.0.4
 tqdm==4.43.0
 traitlets==4.3.3
@@ -111,7 +114,7 @@ wandb==0.8.29
 watchdog==0.10.2
 wcwidth==0.1.9
 webencodings==0.5.1
-Werkzeug
+Werkzeug==1.0.0
 widgetsnbextension==3.5.1
 xmlschema==1.0.18
 zipp==3.1.0
